Add account controller

--- a/TakeAIMeal.API/Views/Templates/EmailConfirmationTemplate.cshtml
+++ b/TakeAIMeal.API/Views/Templates/EmailConfirmationTemplate.cshtml
@@ -15,7 +15,7 @@
                 </h3>
             </div>
             <div style="width: 100%; margin-top: 30px;margin-bottom: 80px;font-size: 14px;">
-                <p>Dziękujemy za wybranie naszej aplikacji, aby móc w pełni korzystać z naszej aplikacji musisz potwierdzić adres e-mail.</p>
+                <p>Dziękujemy za wybranie naszej aplikacji, aby móc w pełni z niej korzystać musisz potwierdzić adres e-mail.</p>
                 <a href="@Model.Url" style="font-weight: 700;margin-left: calc(50% - 50px);width: 100px;display: inline-block;text-align: center;margin-top: 5%;color: rgb(255, 255, 255);background-color: rgb(255, 192, 0);;text-decoration-line: none;border-radius: 5px;padding: 5px 10px;">Potwierdź</a>
             </div>
 
