--- a/TakeAIMeal.WebUI/src/assets/css/site.css
+++ b/TakeAIMeal.WebUI/src/assets/css/site.css
@@ -293,13 +293,57 @@ body {
                 margin-bottom: .5rem;
             }
 
-        .carusel {
-            display: flex;
-            gap: 20px;
-            flex-direction: column;
-            width: 100%;
-            min-height: 100%;
+        #app .page-container .content-container .action-container.cookbook {
+            padding: 2rem;
+            justify-content: space-evenly;
+            gap: 10px;
         }
+
+        #app .page-container .content-container .grid-container {
+            padding: 2rem 5rem;
+            background-color: var(--color-white);
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+        }
+
+            #app .page-container .content-container .grid-container .list-row {
+                padding: 1rem 5rem;
+                border: 2px solid var(--color-grey);
+                border-radius: .5rem;
+                margin-bottom: 1.5rem;
+                display: grid;
+                grid-template-columns: 2fr 5fr 2fr;
+                align-items: center;
+                max-width: 1300px;
+            }
+
+                #app .page-container .content-container .grid-container .list-row img {
+                    width: 125px;
+                    height: 125px;
+                    border-radius: 1rem;
+                    box-shadow: 0 0 10px -3px rgba(0,0,0,.6);
+                }
+
+                #app .page-container .content-container .grid-container .list-row label {
+                    color: var(--color-main);
+                    display: flex;
+                    align-items: center;
+                    font-weight: 600;
+                    text-align: center;
+                }
+
+                #app .page-container .content-container .grid-container .list-row .btn {
+                    margin: auto 0;
+                }
+
+                .carusel {
+                    display: flex;
+                    gap: 20px;
+                    flex-direction: column;
+                    width: 100%;
+                    min-height: 100%;
+                }
 
     .carusel .carusel-container {
         padding: 1rem 1.5rem;
@@ -409,6 +453,13 @@ body {
             display: flex;
             justify-content: center;
         }
+
+    #app .page-container .content-container .grid-container .list-row {
+        padding: 1rem;
+        display: flex;
+        gap: 10px;
+        flex-direction: column;
+    }
 }
 
 
