--- a/TakeAIMeal.WebUI/src/assets/css/site.css
+++ b/TakeAIMeal.WebUI/src/assets/css/site.css
@@ -331,19 +331,26 @@ body {
                     align-items: center;
                     font-weight: 600;
                     text-align: center;
+                    padding-right: 1rem;
                 }
 
                 #app .page-container .content-container .grid-container .list-row .btn {
                     margin: auto 0;
                 }
 
-                .carusel {
-                    display: flex;
-                    gap: 20px;
-                    flex-direction: column;
-                    width: 100%;
-                    min-height: 100%;
-                }
+            #app .page-container .content-container .action-container.saved-recipe {
+                padding: 1rem;
+                display: flex;
+                justify-content: center;
+            }
+
+        .carusel {
+            display: flex;
+            gap: 20px;
+            flex-direction: column;
+            width: 100%;
+            min-height: 100%;
+        }
 
     .carusel .carusel-container {
         padding: 1rem 1.5rem;
@@ -460,6 +467,10 @@ body {
         gap: 10px;
         flex-direction: column;
     }
+
+        #app .page-container .content-container .grid-container .list-row label{
+            padding-right: 0;
+        }
 }
 
 
