--- a/TakeAIMeal.Data/TakeAIMealDB.tt
+++ b/TakeAIMeal.Data/TakeAIMealDB.tt
@@ -58,7 +58,7 @@
     //FilterSettings.ColumnFilters.Add(new RegexIncludeFilter(".*")); // Rarely used as it would only include columns with names listed here
     //FilterSettings.StoredProcedureFilters.Add(new RegexExcludeFilter("Calc")); // This excludes all stored procedures 'Calc' in the name
     //FilterSettings.StoredProcedureFilters.Add(new RegexIncludeFilter("Pricing.*")); // This includes all stored procedures starting with 'Pricing'
-    FilterSettings.StoredProcedureFilters.Add(new RegexIncludeFilter("sp_.*")); // This includes all stored procedures starting with 'sp_'
+    FilterSettings.StoredProcedureFilters.Add(new RegexExcludeFilter("sp_.*")); // This includes all stored procedures starting with 'sp_'
     
 
     // Elements to generate ***************************************************************************************************************
