--- a/TakeAIMeal.WebUI/src/assets/css/site.css
+++ b/TakeAIMeal.WebUI/src/assets/css/site.css
@@ -51,7 +51,7 @@ body {
 
         #app .page-header .navbar .navbar-brand,
         #app .page-header .navbar .navbar-nav .nav-link{
-            color: var(--color-main);
+            color: var(--color-black);
             font-weight: 600;
         }
 
@@ -76,7 +76,7 @@ body {
                 }
 
             #app .page-header .navbar .user-container * {
-                color: var(--color-main);
+                color: var(--color-black);
                 font-weight: 600;
             }
 
@@ -112,7 +112,7 @@ body {
 
             #app .page-container .btn.btn-secondary {
                 background-color: var(--color-white);
-                color: var(--color-main);
+                color: var(--color-black);
                 border-color: var(--color-white);
             }
 
@@ -230,9 +230,13 @@ body {
             border-radius: .5rem;
             border: 1px solid var(--color-grey);
             margin: 2rem auto;
-            color: var(--color-main);
+            color: var(--color-black);
             max-width: 1000px;
         }
+
+            #app .page-container .content-container .recipe-container > p{
+                color: var(--color-black);
+            }
 
             #app .page-container .content-container .recipe-container .image-area {
                 display: flex;
@@ -251,14 +255,13 @@ body {
             }
 
             #app .page-container .content-container .recipe-container .recipe-area label{
-                color: var(--color-main);
+                color: var(--color-black);
                 font-weight: 600;
                 text-align: center;
             }
 
             #app .page-container .content-container .recipe-container .recipe-area span {
-                color: var(--color-main);
-                font-style: italic;
+                color: var(--color-black);
             }
 
         #app .page-container .content-container .form-container.account-signin .form-group,
@@ -326,7 +329,7 @@ body {
                 }
 
                 #app .page-container .content-container .grid-container .list-row label {
-                    color: var(--color-main);
+                    color: var(--color-black);
                     display: flex;
                     align-items: center;
                     font-weight: 600;
@@ -420,19 +423,19 @@ body {
 }
 
 .custom-dropdown .multiselect__option:not(.multiselect__option--highlight) span {
-    color: var(--color-main);
+    color: var(--color-black);
 }
 
 .custom-dropdown .multiselect__select::before {
     top: 85%;
     border-width: 8px 8px 0 8px;
     border-color: var(--color-main) transparent transparent transparent;
-    color: var(--color-main);
+    color: var(--color-black);
 }
 
 .custom-dropdown .multiselect__single,
 .custom-dropdown .multiselect__input {
-    color: var(--color-main);
+    color: var(--color-black);
 }
 
     .custom-dropdown .multiselect__tags{
@@ -525,5 +528,61 @@ body {
         -webkit-transform: translateX(0);
         transform: translateX(0);
         opacity: 1;
+    }
+}
+
+
+.loader {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backdrop-filter: initial;
+    backdrop-filter: initial;
+    z-index: 5000;
+    background-color: rgba(255,255,255,.4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.lds-ring {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+}
+
+    .lds-ring div {
+        box-sizing: border-box;
+        display: block;
+        position: absolute;
+        width: 64px;
+        height: 64px;
+        margin: 8px;
+        border: 8px solid rgb(55, 188, 247);
+        border-radius: 50%;
+        animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+        border-color: rgb(55, 188, 247) transparent transparent transparent;
+    }
+
+        .lds-ring div:nth-child(1) {
+            animation-delay: -0.45s;
+        }
+
+        .lds-ring div:nth-child(2) {
+            animation-delay: -0.3s;
+        }
+
+        .lds-ring div:nth-child(3) {
+            animation-delay: -0.15s;
+        }
+
+@keyframes lds-ring {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
     }
 }
