--- a/TakeAIMeal.WebUI/src/assets/css/icons.css
+++ b/TakeAIMeal.WebUI/src/assets/css/icons.css
@@ -11,9 +11,14 @@ i.icon-flag {
     display: inline-block;
     border-radius: 1rem;
     box-shadow: 0px 0px 8px -1px rgba(0, 0, 0, 0.6);
+    opacity: 0.5;
 }
 
-    i.icon-flag:hover{
+    i.icon-flag.active{
+        opacity: 1;
+    }
+
+    i.icon-flag:hover {
         opacity: 0.8;
         cursor: pointer;
     }
